--- a/grav/user/themes/lgm-2020/templates/partials/footer.html.twig
+++ b/grav/user/themes/lgm-2020/templates/partials/footer.html.twig
@@ -1,5 +1,28 @@
-<section id="footer" class="section bg-gray">
-    <section class="container {{ grid_size }}">
-        <p><a href="https://libregraphicsmeeting.org/lgm/">LGM Organization</a> | <a href="https://github.com/libregraphicsmeeting"><i class="fa fa-code"></i> Source Code</a></p>
-    </section>
-</section>
+
+ <footer>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+               <p><a href="https://libregraphicsmeeting.org/lgm/">LGM Organization</a> | <a href="https://github.com/libregraphicsmeeting"><i class="fa fa-code"></i> Source Code</a></p>
+   
+            </div><!-- /col3 -->
+
+            <div class="col-md-4">
+                <ul>
+                  <li><a href="#">Je suis le footer</a></li>
+                  <li><a href="#">bla bla bla</a></li>
+                  <li><a href="#">bla bla bla</a></li>
+                </ul>
+              </div><!-- /col3 -->
+
+              <div class="col-md-4">
+                  <ul>
+                    <li><a href="#">bla bla bla</a></li>
+                    <li><a href="#">bla bla bla</a></li>
+                    <li><a href="#">bla bla bla</a></li>
+                  </ul>
+                </div><!-- /col3 -->
+          </div><!-- /row -->
+        </div><!-- /container-->
+  </footer>
