--- a/grav/user/themes/lgm-2020/css/custom.css
+++ b/grav/user/themes/lgm-2020/css/custom.css
@@ -30,7 +30,7 @@ ul.dropdown-menu.show {
 
 @font-face {
     font-family:Poppins;
-    src:url("fonts/Poppins-SemiBold.ttf") format("truetype");
+    src:url("../fonts/Poppins-SemiBold.ttf") format("truetype");
 }
 
 body {
