add full logo, and adapt main page
update navbar in main page to use the full logo,
and remove redundant text in the card.

I think we can keep small logo in other pages, though this can be discussed.

--- a/css/lgm20.css
+++ b/css/lgm20.css
@@ -25,6 +25,16 @@
     opacity: 0.3;   
 }
 
+#navbarSupportedContent {
+    position: relative;
+    top: -120px;
+}
+
+#callButtonMain {
+    position: relative;
+    top: 130px; 
+}
+
 @media (max-width: 768px) {
     .card {
         height: 35em;
